# rider

./: .gitignore  Cargo.toml  LICENSE
datas/: test.xml
examples/: controller.rs  keyboard.rs  status.rs  test_controller.rs  test_env.rs  tester.rs
examples/game_lib/: controller.rs
examples/lib_test/: game_struct.rs  macro.rs  quick-xml.rs
src/: lib.rs
src/libs/: mod.rs
src/libs/devices/: controller.rs  mod.rs
src/libs/state/: state.rs
tests/: state.rs
